fix gap between board and shadow (close enough)

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -91,7 +91,7 @@ body {
 }
 
 .board-slot {
-  width: 158px;
+  width: 159px;
   height: 158px;
   margin-left:-1px;
   display: inline-block;
